[project]
name = "mlbcountswebapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "gspread>=6.1.4",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "pymongo>=4.10.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]

[tool.ruff]
# Указываем уровень жесткости для сообщений об ошибках и предупреждениях
lint.select = ["E", "F", "W", "I", "C"]

# Отключаем несколько проверок, которые могут быть избыточными для вашего проекта
# Например, можно отключить проверку на неиспользуемые импорты или переменные
lint.ignore = ["C901"]

# Задаем максимальную длину строки
line-length = 120